--- a/index.html
+++ b/index.html
@@ -1,42 +1,93 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel=
-</head>
-<title>
-DAY 1
-</title>
-</head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Untitled Document</title>
+<style type="text/css">
+.resume {
+}
+body {
+	background-color: #CCC;
+	background-image: url(../../../Public/Pictures/Sample%20Pictures/Tulips.jpg);
+}
+.re {
+	font-style: italic;
+}
+.sd {
+	color: #000;
+}
+.s {
+	font-family: Times New Roman, Times, serif;
+}
+</style></head>
+
 <body>
-<h1> intro </h1>
-<h2>kamali</h2>
-<h3>ccs</h3>
-<h4>SASTRA</h4>
-<h5>src</h5>
-<h6>kumbakonam</h6>
-<p>i am  from sastra university <br> i will leaarn more in this university</p>
-<ol>
-app<br>
-bapp<br>
-capp<br>
-dapp<br>
-</ol>
-<img src="C:\Users\Public\Pictures\Sample Pictures\Desert.jpg" />
-<ul>
-<li>miltone</li>
-<li>barath</li>
-<li>gee</li>
-
-</ul>
-
-HAI , I AM KAMALI
-<em>from thiruvidaimarudur</em>
-<div> i am happy</div>
-<i> i like animals</i>
-<strong> l would play tennies</strong>
-<a href="http://sastra.edu">my clg</a>
-
+<p class="re"><span class="re">KAMALAVALLI  R</span></p>
+<p class="re"><span class="re">kamali421997@gmail.com</span></p>
+<p class="re"><span class="re">mobno:+919894310905</span></p>
+<p class="re"><span class="re"><strong>career objetive</strong></span></p>
+<p class="re"><span class="re">willing to work in  a reputed organisation where in  i can</span></p>
+<p class="re"><span class="re">utlize my accured skills and experience for meeting the organisational goals.</span></p>
+<p>	<span class="re"><span class="re"><strong>Academic qualification</strong></span></span></p>
+<table width="593" height="152" border="1">
+  <tr>
+    <td width="93" class="re"><span class="re"><strong>COURSE</strong></span></td>
+    <td width="107" class="re"><span class="re"><strong>B.OF.STUDY</strong></span></td>
+    <td width="176" class="re"><span class="re"><strong> INSTITION OF STUDY</strong></span></td>
+    <td width="88" class="re"><span class="re"><strong>YEAR OF PASSING</strong></span></td>
+    <td width="95" class="re"><span class="re"><strong>PERENTAGE</strong></span></td>
+  </tr>
+  <tr>
+    <td height="61" class="re"><span class="re"><strong>BSC(CCS)</strong></span></td>
+    <td><p class="re"><span class="re"><strong>SASTRA university</strong></span></p>
+    <p class="re"><span class="re"><strong>kumbakonam</strong></span></p></td>
+    <td><p class="re"><span class="re"><strong>SASTRA university</strong></span></p>
+    <p class="re"><span class="re"><strong>kumbakonam</strong></span></p></td>
+    <td class="re"><span class="re"><strong>2017</strong></span></td>
+    <td class="re"><span class="re"><strong>6.0284</strong></span></td>
+  </tr>
+  <tr>
+    <td class="re"><span class="re"><strong>X11</strong></span></td>
+    <td class="re"><span class="re"><strong>STATE</strong></span></td>
+    <td><p class="re"><span class="re"><strong>T.A.A.D higher secondary</strong></span></p>
+    <p class="re"><span class="re"><strong>Thiruvidaimarudur</strong></span></p></td>
+    <td class="re"><span class="re"><strong>2014</strong></span></td>
+    <td class="sd">87.70</td>
+  </tr>
+  <tr>
+    <td class="re"><span class="re"><strong>X</strong></span></td>
+    <td class="re"><span class="re"><strong>STATE</strong></span></td>
+    <td><p class="re"><span class="re"><strong>T.A.A.D higher secondary</strong></span></p>
+    <p class="re"><span class="re"><strong>Thiruvidaimarudur</strong></span></p></td>
+    <td class="re"><span class="re"><strong>2012</strong></span></td>
+    <td>80.20</td>
+  </tr>
+</table>
+<p><strong>Technical skills</strong></p>
+<p>programming in c</p>
+<p>programming in c++</p>
+<p class="s"><strong>Areas of interest</strong></p>
+<p>Sql query</p>
+<p>Digital electronics(logic cirucuit)</p>
+<p>programming in c++</p>
+<p><strong>Personal skills</strong></p>
+<p>Adapatable to environment</p>
+<p>Good at teamwork</p>
+<p><strong>Hobbies</strong></p>
+<p class="resume">Garedening</p>
+<p><strong>Achievement</strong></p>
+<p> paticipated in &quot;THETA15&quot;, a National Level Thechical fest at SASTRA university in kumbakonam</p>
+<p>paticipated in Tamil eloctction for &quot;NATIONAL VOLTERS DAY&quot;at SASTRA  university in kumbakonam</p>
+<p>paticipated in Miniproject at SASTRA university in kumbakonam	    </p>
+<p><strong>profile</strong></p>
+<p align="center">  Father's name : Rajendran R</p>
+<p align="center">  D.O.B    :12.02.1997</p>
+<p align="center">   Address :99/North street,</p>
+<p align="center">   Thiruvidaimarudur 612-104</p>
+<p align="right">   <strong>Yours </strong></p>
+<p align="right">   kamalavalli</p>
+<p>Date: 18.03.2016     </p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 </body>
 </html>
-
